[package]
name = "php-rnet"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "A high-performance PHP HTTP client with browser TLS/H2 fingerprinting, built in Rust"
license = "MIT"

[lib]
name = "rnet"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ext-php-rs = { version = "0.15", features = ["closure", "anyhow"] }
wreq = { version = "6.0.0-rc.28", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "charset",
    "socks",
    "ws",
    "multipart",
    "hickory-dns",
    "stream",
    "json",
    "form",
    "query",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
bytes = "1"
once_cell = "1"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2.0.18"
wreq-util = "3.0.0-rc.10"

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies.mimalloc]
version = "0.1"
optional = true
default-features = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
ext-php-rs = { version = "0.15", features = ["closure", "anyhow"] }
